--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -30,7 +30,8 @@ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CUR
 exec-once = waybar
 exec-once = swaync
 exec-once = hypridle &
-exec-once = solaar -w hide
+exec-once = sleep 2 && solaar -w hide
+exec-once = sleep 5 && /usr/bin/sunshine
 exec-once = wl-paste --watch cliphist store
 exec-once = kdeconnect-indicator
 exec-once = udiskie --tray --notify --auto-unmount --smart-unmount --no-gui &
@@ -304,7 +305,7 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 bind = $mainMod, L, exec, hyprlock
 
 # =======================================================================================
-#   SCREENSHOTS (with Hyprshot)
+#   SCREENSHOTS#
 # =======================================================================================
 
 # Snippet / Select a region to save to file
