--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -29,7 +29,7 @@ exec-once = hyprpaper &
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=hyprland
 exec-once = waybar
 exec-once = swaync
-exec-once = hypridle &
+exec-once = sleep 2 && hypridle &
 exec-once = sleep 2 && solaar -w hide
 exec-once = sleep 5 && /usr/bin/sunshine
 exec-once = wl-paste --watch cliphist store
