--- a/.config/hyprshot/hyprshot.conf
+++ b/.config/hyprshot/hyprshot.conf
@@ -1,4 +1,4 @@
-output_path = /home/killionaire/Pictures/Screenshots
+output_path = $HOME/Pictures/Screenshots
 
 # Image format
 format = png  # Best quality (use jpg for compression)
